# HardwareDataLogger

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  HardwareDataLogger.code-workspace  README.md  docker-compose.ci.yml  docker-compose.yml  justfile  pyproject.toml
.devcontainer/: devcontainer.json
Simulation/FirmwarePCSimulator/: .gitignore  CMakeLists.txt  Dockerfile  LibWrapper.cpp  LibWrapper.hpp  PythonStaticAnalysis.cmake  PythonStaticAnalysis.sh  README.md  Simulation.cpp  Simulation.hpp  VJunitPath.py  data_visualization_widget.py  device_under_test.py  direction_button_widget.py  hardware_display_widget.py  hmi.py  log_tabs_widget.py  main.py  main_window.py  measurement_data_input_widget.py  simulation.hpp  simulation.py  simulation_control_widget.py  simulation_speed_widget.py
Simulation/FirmwarePCSimulator/ESP8266/: CMakeLists.txt  HmiEventHandlers.cpp  HmiEventHandlers.hpp  LibWrapper.cpp  LibWrapper.hpp  README.md  device_under_test.py
Simulation/FirmwarePCSimulator/HMI/: data_visualization_widget.py  direction_button_widget.py  hardware_display_widget.py  log_tabs_widget.py  main_window.py  measurement_data_input_widget.py  simulation_control_widget.py  simulation_speed_widget.py
Simulation/FirmwarePCSimulator/Mock/System/: PlatformFactoryStm32.cpp  README.md  main.h  st7735.c  st7735_reg.c  stm32f1xx_hal.h  stm32f1xx_hal_uart.h
Simulation/FirmwarePCSimulator/STM32F103RBTx/: CMakeLists.txt  HmiEventHandlers.cpp  HmiEventHandlers.hpp  LibWrapper.cpp  LibWrapper.hpp  device_under_test.py
Simulation/FirmwarePCSimulator/STM32F103RBTx/System/: PlatformFactoryStm32.cpp  st7735.c
Simulation/FirmwarePCSimulator/Stub/System/: PlatformFactoryStm32.cpp  stm32f1xx_hal.c  stm32f1xx_hal_uart.c
Software/ESP8266/esp8266-serial-mqtt/: Cargo.toml
Software/ESP8266/esp8266-serial-mqtt/.cargo/: config.toml
Software/ESP8266/esp8266-serial-mqtt/src/: main.rs
Software/NUCLEO-F103RB/Application/: ApplicationBuilder.cpp  ApplicationBuilder.h  CMakeLists.txt  DisplayConfigurator.cpp  DisplayConfigurator.h  HMI.cpp  HMI.h  Measurement.cpp  MissingDoxygen.cmake  README.md  StoragesContainer.cpp  StoragesContainer.h
Software/NUCLEO-F103RB/Application/BusinessLogic/: ApplicationBuilder.cpp  ApplicationBuilder.h  ApplicationBuilder.hpp  HMI.cpp  HMI.h  HMI.hpp  Measurement.cpp  Measurement.h  Measurement.hpp
Software/NUCLEO-F103RB/Application/Device/: DisplayBacklight.cpp  DisplayBacklight.h  DisplayBacklight.hpp  IDisplay.h  IDisplay.hpp  IStorage.h  IStorage.hpp  KeboardKeyId.h  KeboardKeyState.h  Keyboard.cpp  Keyboard.h  Keyboard.hpp  KeyboardKeyActionState.hpp  SDCardStorage.cpp  SDCardStorage.h  SDCardStorage.hpp  UARTStorage.cpp  UARTStorage.h  UARTStorage.hpp  WifiStorage.cpp  WifiStorage.h  WifiStorage.hpp
Software/NUCLEO-F103RB/Application/Driver/: AmbientLightSensorDriver.cpp  AmbientLightSensorDriver.hpp  DummyAmbientLightSensorDriver.cpp  IAmbientLightSensorDriver.h  IAmbientLightSensorDriver.hpp  IDisplayBacklightDriver.h  IDisplayBacklightDriver.hpp  IKeyboardDriver.hpp  IKeyboardKeysDriver.h  KeboardKeyId.h  KeboardKeyState.h  KeyboardFourPushButtonsDriver.cpp  KeyboardFourPushButtonsDriver.hpp  KeyboardKeyId.hpp  KeyboardKeyState.hpp  KeyboardKeysDriver.cpp  KeyboardKeysDriver.h  SDCardDriver.cpp  SDCardDriver.h  SDCardDriver.hpp  ST7735DisplayBacklightDriver.cpp  ST7735DisplayBacklightDriver.hpp  ST7735DisplayDriver.cpp  ST7735DisplayDriver.h  ST7735DisplayDriver.hpp  UARTDriver.cpp  UARTDriver.hpp  UARTStorageDriver.cpp  UARTStorageDriver.hpp  board_ST7735.h  board_ST7736_os.h  gfxconf.h
Software/NUCLEO-F103RB/Application/SimulationStubs/: ApplicationBuilderStub.cpp  simulation.c  simulation.cpp
Software/STM32F103RBTx/: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  NUCLEO-F103RB.ioc  README.md  STM32F103RBTx.ioc  STM32F103XX_FLASH.ld  build.ninja  cmake_install.cmake  compile_commands.json  launch.json  tasks.json
Software/STM32F103RBTx/Application/: CMakeLists.txt  CodeCoverage.cmake
Software/STM32F103RBTx/Application/BusinessLogic/: CMakeLists.txt
Software/STM32F103RBTx/Application/Device/: CMakeLists.txt
Software/STM32F103RBTx/Application/Driver/: CMakeLists.txt
Software/STM32F103RBTx/Application/SimulationBindings/: CMakeLists.txt  LibWrapper.cpp  LibWrapper.cppm  LibWrapper.h
Software/STM32F103RBTx/Core/Inc/: MyApplication.hpp  PlatformFactory.hpp  PlatformFactoryStm32.hpp  main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Software/STM32F103RBTx/Core/Src/: MyApplication.cpp  PlatformFactory.cpp  PlatformFactoryStm32.cpp  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Software/STM32F103RBTx/cmake/stm32cubemx/: CMakeLists.txt
Test/UT/: CMakeLists.txt  CodeCoverage.cmake  CodeCoverageConfig.cmake  DynamicAnalysisConfig.cmake  StaticAnalysisConfig.cmake
Test/UT/BusinessLogic/: test_HmiBuilder.cpp  test_SaferArray.cpp
Test/UT/Driver/: test_AmbientLightSensorDriver.cpp  test_DisplayPixelColor.cpp  test_DriverState.cpp  test_KeyboardFourPushButtonsDriver.cpp  test_St7735DisplayBrightnessDriver.cpp  test_St7735DisplayDriver.cpp  test_UartDriver.cpp
Test/UT/System/: fonts.h  main.h  st7735.cpp  st7735.h  stm32f1xx_hal.h  stm32f1xx_hal_adc.h  stm32f1xx_hal_gpio.h  stm32f1xx_hal_tim.h  stm32f1xx_hal_uart.h
Test/Unit/: CMakeLists.txt  CodeCoverage.cmake  README.md
Test/Unit/BusinessLogic/: test_MeasurementCoordinator.cpp  test_MeasurementDataStore.cpp  test_SaferArray.cpp
Test/Unit/Common/: test_CobsEncoder.cpp  test_Crc.cpp
Test/Unit/Device/: test_PulseCounterMeasurementSource.cpp  test_ScpiMEASureMessage.cpp  test_UartDataLinkLayer.cpp  test_WiFiMeasurementRecorder.cpp
Test/Unit/Driver/: test_AmbientLightSensorDriver.cpp  test_DisplayPixelColor.cpp  test_KeyboardFourPushButtonsDriver.cpp  test_PulseCounterDriver.cpp  test_St7735DisplayBrightnessDriver.cpp  test_UartDriver.cpp
Test/Unit/ESP8266/: test_UartStateMachine.cpp
Test/Unit/System/: fonts.c  fonts.h  main.cpp  main.h  st7735.cpp  st7735.h  stm32f1xx_hal.h  stm32f1xx_hal_adc.h  stm32f1xx_hal_def.h  stm32f1xx_hal_gpio.h  stm32f1xx_hal_tim.h
(+866 files in other folders)
