[project]
name = "FirmwarePCSimulator"
version = "0.1.0"
requires-python = ">=3.12"

# ============================================================
# BLACK
# ============================================================

[tool.black]
line-length = 88
target-version = ["py312"]

# ============================================================
# RUFF
# ============================================================

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D"        # Disable docstring enforcement for now
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

# ============================================================
# MYPY
# ============================================================

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true